InsuranceOrg/force-app/main/default/objects/vlocity_ins__GroupCensusMemberPlan__c/vlocity_ins__GroupCensusMemberPlan__c.object-meta.xml
<CustomObject>
    <description>The association of Group Census Member and a Plan. Used when census data includes details about members&apos; previous plan enrollments. Master-detail child object of Census Member.</description>
    <label>Group Census Member Plan</label>
    <nameField>
        <label>Group Census Member Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Census Member Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>