InsuranceOrg/force-app/main/default/objects/vlocity_ins__GroupCensusMemberPlan__c/fields/vlocity_ins__ContractLineId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ContractLineId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <referenceTo>vlocity_ins__ContractLineItem__c</referenceTo>
    <relationshipLabel>Group Census Member Plans</relationshipLabel>
    <relationshipName>Group_Census_Member_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>