InsuranceOrg/force-app/main/default/objects/vlocity_ins__GroupCensusMemberPlan__c/fields/vlocity_ins__GroupCensusMemberId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__GroupCensusMemberId__c</fullName>
    <label>Census Member</label>
    <referenceTo>vlocity_ins__GroupCensusMember__c</referenceTo>
    <relationshipLabel>Group Census Member Plans</relationshipLabel>
    <relationshipName>GroupCensusMemberPlan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>