InsuranceOrg/force-app/main/default/objects/vlocity_ins__GroupCensusMemberPlan__c/fields/vlocity_ins__PlanProductId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PlanProductId__c</fullName>
    <formula>CASESAFEID(vlocity_ins__ContractLineId__r.vlocity_ins__Product2Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Product</label>
    <type>Text</type>
</CustomField>